tests/codegen/fail/interface/trait/argument_non_input_type.stderr
error[E0277]: the trait bound `ObjA: IsInputType<__S>` is not satisfied
  --> fail/interface/trait/argument_non_input_type.rs:10:23
   |
10 |     fn id(&self, obj: ObjA) -> &str;
   |                       ^^^^ unsatisfied trait bound
   |
help: the trait `IsInputType<__S>` is not implemented for `ObjA`
  --> fail/interface/trait/argument_non_input_type.rs:4:1
   |
 4 | pub struct ObjA {
   | ^^^^^^^^^^^^^^^
   = help: the following other types implement trait `IsInputType<S>`:
             ArcStr
             ID
             bool
             compact_str::CompactString
             f64
             i32
             juniper::TypeKind
             juniper::schema::model::DirectiveLocation
             std::string::String

error[E0277]: the trait bound `ObjA: FromInputValue<__S>` is not satisfied
  --> fail/interface/trait/argument_non_input_type.rs:10:23
   |
 8 | #[graphql_interface]
   | -------------------- required by a bound introduced by this call
 9 | trait Character {
10 |     fn id(&self, obj: ObjA) -> &str;
   |                       ^^^^ unsatisfied trait bound
   |
help: the trait `FromInputValue<__S>` is not implemented for `ObjA`
  --> fail/interface/trait/argument_non_input_type.rs:4:1
   |
 4 | pub struct ObjA {
   | ^^^^^^^^^^^^^^^
   = help: the following other types implement trait `FromInputValue<S>`:
             ArcStr
             ID
             bool
             compact_str::CompactString
             f64
             i32
             juniper::TypeKind
             juniper::schema::model::DirectiveLocation
             std::string::String
note: required by a bound in `Registry::<S>::arg`
  --> $WORKSPACE/juniper/src/executor/mod.rs
   |
   |     pub fn arg<T>(&mut self, name: impl Into<ArcStr>, info: &T::TypeInfo) -> Argument<S>
   |            --- required by a bound in this associated function
   |     where
   |         T: GraphQLType<S> + FromInputValue<S>,
   |                             ^^^^^^^^^^^^^^^^^ required by this bound in `Registry::<S>::arg`
